--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
   },
   "homepage": "https://github.com/mngmay/webauth-i-challenge#readme",
   "dependencies": {
+    "axios": "^0.19.0",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "helmet": "^3.21.0",
     "knex": "^0.19.4",
-    "sqlite3": "^4.1.0"
+    "react-router-dom": "^5.0.1",
+    "sqlite3": "^4.1.0",
+    "users": "^2.0.0"
   },
   "devDependencies": {
     "nodemon": "^1.19.2"
