--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "helmet": "^3.21.0",
     "knex": "^0.19.4",
+    "node-sass": "^4.12.0",
     "react-router-dom": "^5.0.1",
     "sqlite3": "^4.1.0",
     "users": "^2.0.0"
